--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.2.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.376.0",
     "mongoose": "^8.3.2",
