--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-intersection-observer": "^9.10.2",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
+    "stripe": "^15.8.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "validator": "^13.11.0"
